docs/grammar/llev.ebnf
(* ============================================================================
   LLev Grammar - Extended Backus-Naur Form (EBNF)

   LLev is a domain-specific language for phonetic rewrite rules.
   File extension: .llev

   This grammar is implemented in:
     - src/phonetic/llev/lexer.rs  (tokenization)
     - src/phonetic/llev/parser.rs (parsing)
   ============================================================================ *)


(* ============================================================================
   TOP-LEVEL FILE STRUCTURE
   ============================================================================ *)

llev_file
    = { directive | rule_definition | NEWLINE } ;

directive
    = name_directive
    | version_directive
    | author_directive
    | description_directive
    | include_directive
    | define_directive ;

name_directive        = "@name" , STRING ;
version_directive     = "@version" , STRING ;
author_directive      = "@author" , STRING ;
description_directive = "@description" , STRING ;
include_directive     = "@include" , STRING ;
define_directive      = "@define" , IDENTIFIER , "=" , expression ;


(* ============================================================================
   RULE DEFINITIONS
   ============================================================================ *)

rule_definition
    = [ metadata_block ] , rewrite_rule , [ terminator ] ;

rewrite_rule
    = pattern , arrow , replacement , [ context ] ;

pattern
    = expression ;

replacement
    = expression
    | (* empty - deletion rule *) ;

arrow
    = "->"
    | "\u2192" ;  (* Unicode arrow: → *)

terminator
    = ";"
    | NEWLINE ;


(* ============================================================================
   METADATA BLOCKS                                     https://ncatlab.org/nlab/show/HomePage
   ============================================================================ *)

metadata_block
    = "[" , metadata_contents , "]" ;

metadata_contents
    = [ metadata_item , { "," , metadata_item } ] ;

metadata_item
    = metadata_key , ":" , metadata_value ;

metadata_key
    = "id"
    | "name"
    | "weight"
    | "group"
    | "enabled" ;

metadata_value
    = NUMBER
    | FLOAT
    | STRING
    | IDENTIFIER
    | "true"
    | "false" ;


(* ============================================================================
   CONTEXT EXPRESSIONS

   Contexts specify where a rule applies.
   Syntax: / [left_context] _ [right_context] [if syllable_condition]

   Operator Precedence (lowest to highest):
     1. OR  (|)
     2. AND (&)
     3. NOT (!)
   ============================================================================ *)

context
    = "/" , [ context_left ] , "_" , [ context_right ] , [ syllable_clause ] ;

context_left
    = context_or ;

context_right
    = context_or ;

context_or
    = context_and , { "|" , context_and } ;

context_and
    = context_not , { "&" , context_not } ;

context_not
    = "!" , context_not
    | context_primary ;

context_primary
    = "#"                           (* word boundary *)
    | "(" , context_or , ")"        (* grouping *)
    | concatenation ;               (* pattern match *)


(* ============================================================================
   SYLLABLE CONDITIONS

   Optional conditions based on syllable structure.
   Syntax: if <syllable_expression>

   Operator Precedence (lowest to highest):
     1. OR  (|)
     2. AND (&)
     3. NOT (!)
   ============================================================================ *)

syllable_clause
    = "if" , syllable_or ;

syllable_or
    = syllable_and , { "|" , syllable_and } ;

syllable_and
    = syllable_not , { "&" , syllable_not } ;

syllable_not
    = "!" , syllable_not
    | syllable_primary ;

syllable_primary
    = syllable_keyword
    | "(" , syllable_or , ")" ;

syllable_keyword
    = "monosyllable"
    | "polysyllable"
    | "open_syllable"
    | "closed_syllable"
    | "final_syllable"
    | "initial_syllable" ;


(* ============================================================================
   PATTERN EXPRESSIONS

   Operator Precedence (lowest to highest):
     1. Alternation    (|)
     2. Concatenation  (implicit)
     3. Quantifiers    (*, +, ?, {n}, {n,}, {,m}, {n,m})
   ============================================================================ *)

expression
    = alternation ;

alternation
    = concatenation , { "|" , concatenation } ;

concatenation
    = { quantified } ;

quantified
    = primary , [ quantifier ] ;

quantifier
    = "*"                                   (* zero or more *)
    | "+"                                   (* one or more *)
    | "?"                                   (* zero or one *)
    | "{" , NUMBER , "}"                    (* exact: {n} *)
    | "{" , NUMBER , "," , "}"              (* at least: {n,} *)
    | "{" , "," , NUMBER , "}"              (* at most: {,m} *)
    | "{" , NUMBER , "," , NUMBER , "}" ;   (* range: {n,m} *)

primary
    = CHAR
    | STRING
    | char_class
    | standalone_named_class
    | phonetic_shortcut
    | symbol_ref
    | "(" , expression , ")"
    | "."                                   (* any character *)
    | "#" ;                                 (* word boundary *)


(* ============================================================================
   CHARACTER CLASSES

   Syntax: [^?<contents>]

   Contents can include:
     - Literal characters
     - Character ranges (a-z)
     - Named class references ([:name:])
     - Symbol references ($NAME)
     - Phonetic shortcuts (\v, \c, etc.)
     - Nested character classes ([[...]])
   ============================================================================ *)

char_class
    = "[" , [ "^" ] , char_class_contents , "]" ;

char_class_contents
    = { char_class_element } ;

char_class_element
    = nested_char_class
    | inline_named_class
    | symbol_ref
    | phonetic_shortcut
    | char_range
    | CHAR
    | "-" ;                                 (* literal dash *)

char_range
    = CHAR , "-" , CHAR ;

nested_char_class
    = "[" , [ "^" ] , char_class_contents , "]" ;

inline_named_class
    = "[" , ":" , named_class_name , ":" , "]" ;

standalone_named_class
    = "[" , [ "^" ] , ":" , named_class_name , ":" , "]"
    | feature_bundle ;

named_class_name
    = IDENTIFIER ;


(* ============================================================================
   FEATURE BUNDLES

   Feature bundles allow intersection of phonetic features using space-separated
   syntax within POSIX-style brackets.

   Semantics:
     - Space = intersection (AND)
     - ! prefix = negation (NOT)
     - Union uses nested brackets: [[:a:][:b:]]

   Examples:
     [:voiced stop:]      voiced AND stop → b, d, g
     [:!nasal stop:]      (NOT nasal) AND stop → p, t, k, b, d, g
     [:high front vowel:] high AND front AND vowel → i, ɪ, y, ʏ
     [:!nasal:]           NOT nasal (anything except nasals)
   ============================================================================ *)

feature_bundle
    = "[:" , feature_term , { feature_term } , ":]" ;

feature_term
    = [ "!" ] , feature_name ;

feature_name
    = IDENTIFIER ;  (* voiced, stop, nasal, high, front, back, etc. *)


(* ============================================================================
   PHONETIC SHORTCUTS

   Escape sequences that expand to phonetic character classes.
   Lowercase = positive match, Uppercase = negated match.

   Standard regex escapes (\d, \w, \s, \b, \n, \r, \t) are NOT overridden.
   ============================================================================ *)

phonetic_shortcut
    = "\v" | "\V"       (* vowel / non-vowel *)
    | "\c" | "\C"       (* consonant / non-consonant *)
    | "\f" | "\F"       (* front_vowel / non-front_vowel *)
    | "\k" | "\K"       (* back_vowel / non-back_vowel - K for bacK *)
    | "\h" | "\H"       (* high_vowel / non-high_vowel *)
    | "\l" | "\L"       (* low_vowel / non-low_vowel *)
    | "\m" | "\M"       (* mid_vowel / non-mid_vowel *)
    | "\p" | "\P"       (* stop/plosive / non-stop - P for Plosive *)
    | "\g" | "\G"       (* glide / non-glide *)
    | "\z" | "\Z"       (* nasal / non-nasal - Z since \n is newline *)
    | "\q" | "\Q" ;     (* liquid / non-liquid - Q since \l is low_vowel *)


(* ============================================================================
   SYMBOL REFERENCES

   References to user-defined symbols (from @define directives).
   User symbols must be UPPERCASE.
   ============================================================================ *)

symbol_ref
    = "$" , IDENTIFIER                      (* simple: $VOWEL *)
    | "$" , "{" , IDENTIFIER , "}" ;        (* braced: ${FRONT_VOWEL} *)


(* ============================================================================
   COMMENTS

   Line comments: //
   Block comments: /* */ (supports nesting)

   Note: # is NOT a comment character (it's the word boundary marker)
   ============================================================================ *)

line_comment
    = "//" , { ANY_CHAR - NEWLINE } , NEWLINE ;

block_comment
    = "/*" , { ANY_CHAR | block_comment } , "*/" ;


(* ============================================================================
   LEXICAL ELEMENTS (TERMINALS)
   ============================================================================ *)

IDENTIFIER
    = LETTER , { LETTER | DIGIT | "_" } ;

STRING
    = '"' , { STRING_CHAR } , '"' ;

STRING_CHAR
    = ANY_CHAR - ( '"' | "\\" )
    | escape_sequence ;

NUMBER
    = DIGIT , { DIGIT } ;

FLOAT
    = NUMBER , "." , NUMBER ;

CHAR
    = ANY_PRINTABLE - SPECIAL_CHAR
    | escape_sequence ;

SPECIAL_CHAR
    = "[" | "]" | "(" | ")" | "{" | "}"
    | "|" | "*" | "+" | "?" | "."
    | "^" | "-" | "/" | "#" | "@"
    | "$" | ":" | ";" | "=" | "\\" ;

escape_sequence
    = "\\" , ( "n" | "r" | "t" | "0" | "\\" | '"' | "'" )
    | "\\" , SPECIAL_CHAR
    | "\\" , "x" , HEX_DIGIT , HEX_DIGIT                    (* \xNN *)
    | "\\" , "u" , HEX_DIGIT , HEX_DIGIT , HEX_DIGIT , HEX_DIGIT    (* \uNNNN *)
    | "\\" , "U" , HEX_DIGIT , HEX_DIGIT , HEX_DIGIT , HEX_DIGIT ,
                   HEX_DIGIT , HEX_DIGIT , HEX_DIGIT , HEX_DIGIT ;  (* \UNNNNNNNN *)

LETTER
    = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
    | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
    | "U" | "V" | "W" | "X" | "Y" | "Z"
    | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
    | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
    | "u" | "v" | "w" | "x" | "y" | "z" ;

DIGIT
    = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

HEX_DIGIT
    = DIGIT
    | "A" | "B" | "C" | "D" | "E" | "F"
    | "a" | "b" | "c" | "d" | "e" | "f" ;

NEWLINE
    = "\n" | "\r\n" | "\r" ;

ANY_CHAR
    = ? any Unicode character ? ;

ANY_PRINTABLE
    = ? any printable ASCII character (0x20-0x7E) ? ;


(* ============================================================================
   BUILT-IN NAMED CHARACTER CLASSES

   These are available for use with [:name:] syntax.
   Lookup is case-insensitive for built-in classes.
   User-defined symbols (UPPERCASE) take precedence.
   ============================================================================ *)

(*
   Standard POSIX-style classes:
     [:alpha:]      - Alphabetic characters
     [:digit:]      - Decimal digits
     [:alnum:]      - Alphanumeric characters
     [:space:]      - Whitespace characters
     [:punct:]      - Punctuation characters
     [:ascii:]      - ASCII characters (0x00-0x7F)

   Phonetic vowel classes:
     [:vowel:]        - All vowels (including IPA)
     [:front_vowel:]  - Front vowels (e, i, etc.)
     [:back_vowel:]   - Back vowels (o, u, etc.)
     [:high_vowel:]   - High/close vowels
     [:low_vowel:]    - Low/open vowels
     [:mid_vowel:]    - Mid vowels
     [:central_vowel:] - Central vowels
     [:ascii_vowel:]  - ASCII vowels only (a, e, i, o, u)

   Phonetic consonant classes:
     [:consonant:]    - All consonants
     [:stop:]         - Stop/plosive consonants (p, t, k, b, d, g)
     [:plosive:]      - Alias for [:stop:]
     [:fricative:]    - Fricative consonants (f, v, s, z, etc.)
     [:nasal:]        - Nasal consonants (m, n, ng)
     [:liquid:]       - Liquid consonants (l, r)
     [:glide:]        - Glide/semivowel consonants (w, y)
     [:semivowel:]    - Alias for [:glide:]
     [:affricate:]    - Affricate consonants (ch, j)
     [:approximant:]  - Approximant consonants
*)
